[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = [
    "{{cookiecutter.author}}"
]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0"
sentry-sdk = {extras = ["fastapi", "starlette"], version = "^2.3.1"}
pydantic = {extras = ["dotenv"], version = "^2"}
SQLAlchemy = {version = "^2", extras = ["asyncio", "aiosqlite"]}
sqlalchemy-stubs = "^0"
asyncpg = "^0"
ulid-py = "^1"
PyJWT = "^2"
alembic = "^1"
pytoml = "^0"
pydantic-settings = "^2"
gunicorn = "^22.0.0"
colorlog = "^6.8.2"
bcrypt = "^4.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1"
flake8 = "^7"
wemake-python-styleguide = "^0.19"
devtools = "^0.12"
pytest-cov = "^5.0.0"
coverage = "^7.5.2"
pytest = "^8.2.1"
hypothesis = "^6.102.6"

[tool.mypy]
plugins = "sqlmypy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
